# central_bt

./: .gitignore  README.md  pyproject.toml
central_bt/: __init__.py  metrics.py  position_inputs.py  reports.py  runner.py  schema.py
central_bt/examples/: README.md  benchmark_returns.csv  daily_positions.csv  notional_targets.csv  quantity_targets.csv  target_trades.csv  ticker_returns.csv
docs/: INDEX.md  RESEARCH_METHODOLOGY_STANDARD.md  STANDARD_BACKTEST_FRAMEWORK.md
scripts/: run_position_input_backtest.py
tests/: test_backtest_framework.py
